--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img class="conteudo-principal-imagem"src="caixa.png">
         <div class="conteudo-principal-escrito">
           <h1 class="conteudo-principal-escrititulo">Click Surpresa</h1>
-          <h2 class="conteudo-principal-escrito-subtitulo">As melhores Ofertas e </h2>
+          <h2 class="conteudo-principal-escrito-subtitulo">As melhores Ofertas e</h2>
           <h2 class="conteudo-principal-escrito-subtitulo">Achados da Internet</h2>
           <h2 class="conteudo-principal-escrito-subtitulo">em um só lugar</h2>
           <input class type="text" id="inputBusca" placeholder="Digite o número da Oferta Aqui!">
@@ -31,8 +31,8 @@
        </section>
 
        <section class="conteudo-secundario">
-<h3 class="conteudo-secundario-titulo">Ache facilmente o link com a oferta em nosso sistema de busca</h3>
-<h3 class="conteudo-secundario-subtitulo">Digite o número da oferta e clique em Buscar</h3>
+<h3 class="conteudo-secundario-titulo">AQUI VOCÊ ACHA FACILMENTE O LINK COM A OFERTA</h3>
+<h3 class="conteudo-secundario-subtitulo">BASTA DIGITA O NÚMERO E CLICAR EM BUSCAR</h3>
       </section>
 
 
