--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
        <section class="conteudo-secundario">
 <h3 class="conteudo-secundario-titulo">AQUI VOCÊ ACHA FACILMENTE O LINK COM A OFERTA</h3>
-<h3 class="conteudo-secundario-subtitulo">BASTA DIGITA O NÚMERO E CLICAR EM BUSCAR</h3>
+<h3 class="conteudo-secundario-subtitulo">BASTA DIGITAR O NÚMERO E CLICAR EM BUSCAR</h3>
       </section>
 
 
